--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -223,7 +223,11 @@ md-input-container {
 
   }
 
-  .md-input-message-animation, .md-char-counter {
+  .md-input-hint-animation {
+    color: gray;
+  }
+
+  .md-input-message-animation, .md-input-hint-animation, .md-char-counter {
     font-size: $input-error-font-size;
     line-height: $input-error-line-height;
     overflow: hidden;
@@ -242,6 +246,22 @@ md-input-container {
       // Add some padding so that the messages don't touch the character counter
       @include rtl(padding-right, rem(0.5), 0);
       @include rtl(padding-left, 0, rem(0.5));
+    }
+  }
+
+  &:not(.md-input-focused),
+  &.md-input-invalid {
+    .md-auto-hide {
+      .md-input-hint-animation {
+        opacity: 0;
+        margin-top: -100px;
+      }
+    }
+  }
+
+  &.md-input-invalid {
+    .md-input-hint-animation {
+      display: none
     }
   }
 
