[input] somewhat working

--- a/src/components/input/demoErrorsAdvanced/index.html
+++ b/src/components/input/demoErrorsAdvanced/index.html
@@ -77,8 +77,9 @@
 
           <div ng-messages="userForm.phone.$error">
             <div ng-message="pattern">(###) ###-#### - Please enter a valid phone number.</div>
-            <div md-input-hint>(###) ###-####</div>
+            <md-input-hint>(###) ###-####</md-input-hint>
           </div>
+          <div 
         </md-input-container>
 
         <style>
