--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -259,11 +259,18 @@ md-input-container {
     }
   }
 
-  &.md-input-invalid {
-    .md-input-hint-animation {
-      display: none
-    }
-  }
+//   &.md-input-invalid {
+//     .md-input-hint-animation {
+//       display: none
+//     }
+//   }
+
+//   &:not(.md-input-invalid) {
+//     .md-input-message-animation {
+//       display: none
+//     }
+//   }
+
 
   &:not(.md-input-invalid) {
     .md-auto-hide {
