--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -275,6 +275,7 @@ md-input-container {
   &:not(.md-input-invalid) {
     .md-auto-hide {
       .md-input-message-animation {
+        display: none;
         opacity: 0;
         margin-top: -100px;
       }
