--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -219,7 +219,7 @@ md-input-container {
     position: relative;
     order: 4;
     overflow: hidden;
-    height: $input-error-line-height + $error-padding-top;
+    min-height: $input-error-line-height + $error-padding-top;
     @include rtl(clear, left, right);
 
     &.ng-enter {
@@ -245,6 +245,7 @@ md-input-container {
     // Default state for messages is to be visible
     position: absolute;
     opacity: 0;
+    top: 0px;
     margin-top: 0;
 
     // Add some top padding which is equal to half the difference between the expected height
@@ -261,7 +262,21 @@ md-input-container {
   .md-input-message-animation, .md-input-hint-animation {
     .ng-animate {
       position: absolute;
+      top: 0px;
     }
+
+  &.md-input-focused:not(.md-input-invalid) {
+    .md-input-hint-animation:not(.ng-animate) {
+      position: relative;
+    }
+  }
+
+  &.md-input-invalid {
+    .md-input-message-animation:not(.ng-animate) {
+      position: relative;
+    }
+  }
+
 
   &.md-input-focused,
   &.md-input-has-placeholder,
