--- a/src/components/input/demoErrorsAdvanced/index.html
+++ b/src/components/input/demoErrorsAdvanced/index.html
@@ -20,10 +20,6 @@
             others use <code>ng-show</code> or <code>ng-hide</code>.
           </p>
         </div>
-
-        <md-input-container>
-          <md-switch ng-model="showHints">Showing {{showHints ? "Hints" : "Errors"}}</md-switch>
-        </md-input-container>
       </div>
 
       <div layout-gt-sm="row">
@@ -32,11 +28,10 @@
           <label>Name</label>
           <input md-maxlength="30" required name="name" ng-model="user.name" />
 
-          <div class="hint" ng-if="showHints">Tell us what we should call you!</div>
-
           <div ng-messages="userForm.name.$error" ng-if="!showHints">
             <div ng-message="required">Name is required.</div>
             <div ng-message="md-maxlength">The name has to be less than 30 characters long.</div>
+            <md-input-hint>If you have a funny name we will not make fun of you</md-input-hint>
           </div>
         </md-input-container>
 
@@ -48,10 +43,9 @@
           <label>Social Security Number</label>
           <input name="social" ng-model="user.social" ng-pattern="/^[0-9]{3}-[0-9]{2}-[0-9]{4}$/" />
 
-          <div class="hint" ng-if="showHints">###-##-####</div>
-
-          <div ng-messages="userForm.social.$error" ng-if="!showHints">
+          <div ng-messages="userForm.social.$error">
             <div ng-message="pattern">###-##-#### - Please enter a valid SSN.</div>
+            <md-input-hint>We keep all your personal information safe</md-input-hint>
           </div>
         </md-input-container>
 
@@ -62,11 +56,9 @@
         <md-input-container class="md-block" flex-gt-sm>
           <label>Email</label>
           <input name="email" ng-model="user.email"
-                 required minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/" />
+                 autocomplete="off" required minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/" />
 
-          <div class="hint" ng-show="showHints">How can we reach you?</div>
-
-          <div ng-messages="userForm.email.$error" ng-hide="showHints">
+          <div ng-messages="userForm.email.$error">
             <div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
               Your email must be between 10 and 100 characters long and look like an e-mail address.
             </div>
@@ -79,25 +71,15 @@
 
         <md-input-container class="md-block" flex-gt-sm>
           <label>Phone Number</label>
-          <input name="phone" ng-model="user.phone" ng-pattern="/^[(][0-9]{3}[)] [0-9]{3}-[0-9]{4}$/" />
+          <input name="phone" min="9" ng-model="user.phone" autocomplete="off" ng-pattern="/^[(][0-9]{3}[)] [0-9]{3}-[0-9]{4}$/" />
 
-          <div class="hint" ng-show="showHints">(###) ###-####</div>
-
-          <div ng-messages="userForm.phone.$error" ng-hide="showHints">
+          <div ng-messages="userForm.phone.$error" multiple>
+            <div ng-message="required">Phone number required</div>
             <div ng-message="pattern">(###) ###-#### - Please enter a valid phone number.</div>
+            <div ng-message="min">(###) ###-#### - Phone number too short.</div>
+            <md-input-hint>(###) ###-####</md-input-hint>
           </div>
         </md-input-container>
-
-        <style>
-          /*
-           * The Material demos system does not currently allow targeting the body element, so this
-           * must go here in the HTML.
-           */
-          body[dir=rtl] .hint {
-            right: 2px;
-            left: auto;
-          }
-        </style>
       </div>
 
     </form>
